[tool.poetry]
name = "fastadmin-django-djangoeorm"
version = "0.1.0"
description = "FastAdmin Example (Django + Django ORM)"
authors = ["Seva D <vsdudakov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/vsdudakov/fastadmin"
repository = "https://github.com/vsdudakov/fastadmin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
fastadmin = {"version" = "^0.2.19", extras = ["django"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
