[tool.poetry]
name = "fastadmin-fastapi-ponyorm"
version = "0.1.0"
description = "FastAdmin Example (FastAPI + Pony ORM)"
authors = ["Dmitrii <dmitrii.davidov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/vsdudakov/fastadmin"
repository = "https://github.com/vsdudakov/fastadmin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {"version" = "^0.112.4", extras = ["standard"]}
fastadmin = {"version" = "^0.3.3", extras = ["fastapi", "pony"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
