[tool.poetry]
name = "fastadmin-fastapi-sqlalchemy2"
version = "0.1.0"
description = "FastAdmin Example (FastAPI + SQLAlchemy 2.*)"
authors = ["Dmitrii <dmitrii.davidov@gmail.com>", "Seva D <vsdudakov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/vsdudakov/fastadmin"
repository = "https://github.com/vsdudakov/fastadmin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {"version" = "^0.112.4", extras = ["standard"]}
fastadmin = {"version" = "^0.2.21", extras = ["fastapi", "sqlalchemy"]}
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
