[tool.poetry]
name = "fastadmin-flask-sqlalchemy2"
version = "0.1.0"
description = "FastAdmin Example (Flask + SQLAlchemy 2.*)"
authors = ["Dmitrii <dmitrii.davidov@gmail.com>", "Seva D <vsdudakov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/vsdudakov/fastadmin"
repository = "https://github.com/vsdudakov/fastadmin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.0"
flask-cors = "^4.0.0"
fastadmin = {version = "^0.4.2", extras = ["flask", "sqlalchemy"]}
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
